src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/EXTExternalBuffer_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTExternalBuffer_StringErrorContext.class */
public final class EXTExternalBuffer_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglBufferStorageExternalEXT(IJJJI)V", "net/labymod/core/laby3d/opengl/error/generated/EXTExternalBufferErrorContext");
        methods.put("glBufferStorageExternalEXT(IJJJI)V", "net/labymod/core/laby3d/opengl/error/generated/EXTExternalBufferErrorContext");
        methods.put("nglNamedBufferStorageExternalEXT(IJJJI)V", "net/labymod/core/laby3d/opengl/error/generated/EXTExternalBufferErrorContext");
        methods.put("glNamedBufferStorageExternalEXT(IJJJI)V", "net/labymod/core/laby3d/opengl/error/generated/EXTExternalBufferErrorContext");
        return methods;
    }
}
